Fix fullscreen bouncing scrollbars

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,6 @@ html, body {
 }
 
 #game {
-    width: 100%;
-    height: 100%;
+    width: 99.5%;
+    height: 99.5%;
 }
